<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:id="@+id/status_bar_icon"
        android:layout_width="@dimen/status_bar_album_art"
        android:layout_height="@dimen/status_bar_album_art"
        android:adjustViewBounds="true"
        android:background="@android:color/white"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher"
        android:visibility="visible"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="@dimen/status_bar_button_info_container_padding_left"
        android:paddingEnd="@dimen/status_bar_button_info_container_padding_left">

        <TextView
            android:id="@+id/status_bar_app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/status_bar_place_discovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_place_discovered_text"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/status_bar_play"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="5dp"
        android:background="@android:color/white"
        android:contentDescription="@string/cd_play"
        android:src="@drawable/ic_action_pause_black" />


    <ImageButton
        android:id="@+id/status_bar_collapse"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/white"
        android:src="@drawable/ic_close_black"
        tools:ignore="ContentDescription" />
</LinearLayout>